crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__constructor__arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/arguments.lox
---
success: true
exit_code: 0
----- stdout -----
init
1
2

----- stderr -----
