crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__constructor__call_init_early_return.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/call_init_early_return.lox
---
success: true
exit_code: 0
----- stdout -----
init
init
nil

----- stderr -----
