crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__constructor__default.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/default.lox
---
success: true
exit_code: 0
----- stdout -----
<Foo instance at [POINTER]>

----- stderr -----
