crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__constructor__init_not_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/init_not_method.lox
---
success: true
exit_code: 0
----- stdout -----
not initializer

----- stderr -----
