crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__constructor__return_in_nested_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/return_in_nested_function.lox
---
success: true
exit_code: 0
----- stdout -----
bar
<Foo instance at [POINTER]>

----- stderr -----
